--- a/build.gradle
+++ b/build.gradle
@@ -7,6 +7,8 @@ plugins {
     id 'com.android.application' version '7.2.1' apply false
     id 'com.android.library' version '7.2.1' apply false
     id 'org.jetbrains.kotlin.android' version '1.6.10' apply false
+    id 'androidx.navigation.safeargs.kotlin' version "$navigationVersion" apply false
+    id 'org.jetbrains.kotlin.plugin.serialization' version "$kotlinVersion" apply false
 }
 
 task clean(type: Delete) {
