--- a/data/build.gradle
+++ b/data/build.gradle
@@ -1,6 +1,7 @@
 plugins {
     id 'com.android.library'
     id 'kotlin-android'
+    id 'kotlinx-serialization'
     id 'kotlin-kapt'
 }
 
@@ -28,20 +29,23 @@ dependencies {
     implementation project(":domain")
 
     //OkHttp
-    implementation "com.squareup.okhttp3:okhttp:4.9.0"
+    implementation "com.squareup.okhttp3:okhttp:4.10.0"
     implementation "com.squareup.okhttp3:logging-interceptor:5.0.0-alpha.5"
 
     //Retrofit
     implementation "com.squareup.retrofit2:retrofit:2.9.0"
     implementation 'com.squareup.retrofit2:converter-moshi:2.9.0'
+    implementation "com.jakewharton.retrofit:retrofit2-kotlinx-serialization-converter:0.8.0"
 
     //DI
     implementation "io.insert-koin:koin-android:${koinVersion}"
     implementation "io.insert-koin:koin-core:$koinVersion"
 
-    // persistent storage
+    //Persistent storage
     implementation "androidx.room:room-runtime:$roomVersion"
     kapt "androidx.room:room-compiler:$roomVersion"
     implementation "androidx.room:room-ktx:$roomVersion"
 
+    // Json serialization
+    implementation "org.jetbrains.kotlinx:kotlinx-serialization-json:1.3.2"
 }
