--- a/data/build.gradle
+++ b/data/build.gradle
@@ -14,6 +14,7 @@ android {
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
         consumerProguardFiles "consumer-rules.pro"
+        buildConfigField "String", "NASA_API_KEY", "\"${getProperty("local.properties", "nasa_api_key")}\""
     }
 
     buildTypes {
@@ -48,4 +49,39 @@ dependencies {
 
     // Json serialization
     implementation "org.jetbrains.kotlinx:kotlinx-serialization-json:1.3.2"
+
+    // Ui Test
+    androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
+
+    // Mockito Unit Tests
+    //androidTestImplementation "com.linkedin.dexmaker:dexmaker-mockito:2.12.1"
+    androidTestImplementation "org.mockito:mockito-core:2.21.0"
+
+    // Test Framework
+    androidTestImplementation "junit:junit:${junitVersion}"
+    androidTestImplementation "androidx.test.ext:junit:${junitVersion}"
+    androidTestImplementation "androidx.arch.core:core-testing:2.1.0"
+
+    // Google Truth Test
+    androidTestImplementation "com.google.truth:truth:${truthVersion}"
+
+    // Coroutine Test
+    androidTestImplementation "org.jetbrains.kotlinx:kotlinx-coroutines-test:1.6.4"
+    androidTestImplementation "app.cash.turbine:turbine:${turbineVersion}"
+
+}
+
+def getProperty(String filename, String propName) {
+    def propsFile = rootProject.file(filename)
+    if (propsFile.exists()) {
+        def props = new Properties()
+        props.load(new FileInputStream(propsFile))
+        if (props[propName] != null) {
+            return props[propName]
+        } else {
+            print("No such property " + propName + " in file " + filename)
+        }
+    } else {
+        print(filename + " does not exist!")
+    }
 }
