--- a/dependencies.gradle
+++ b/dependencies.gradle
@@ -1,11 +1,14 @@
 ext {
     androidMinSdk = 21
     androidCompileSdk = 33
-    androidTargetSdk = 32
+    androidTargetSdk = 33
     junitVersion = "1.1.3"
     koinVersion = "2.1.6"
     coroutineVersion = "1.6.0"
     roomVersion = '2.4.3'
     navigationVersion = "2.5.2"
     kotlinVersion = "1.6.10"
+    truthVersion = "1.0.1"
+    turbineVersion = "0.12.0"
+    mockitoVersion = "2.21.0"
 }
