--- a/data/build.gradle
+++ b/data/build.gradle
@@ -50,12 +50,9 @@ dependencies {
     // Json serialization
     implementation "org.jetbrains.kotlinx:kotlinx-serialization-json:1.3.2"
 
-    // Ui Test
-    androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
-
     // Mockito Unit Tests
-    //androidTestImplementation "com.linkedin.dexmaker:dexmaker-mockito:2.12.1"
-    androidTestImplementation "org.mockito:mockito-core:2.21.0"
+    androidTestImplementation "org.mockito:mockito-core:3.10.0"
+    androidTestImplementation "org.mockito:mockito-android:2.25.0"
 
     // Test Framework
     androidTestImplementation "junit:junit:${junitVersion}"
@@ -69,6 +66,17 @@ dependencies {
     androidTestImplementation "org.jetbrains.kotlinx:kotlinx-coroutines-test:1.6.4"
     androidTestImplementation "app.cash.turbine:turbine:${turbineVersion}"
 
+    // Test Framework
+    testImplementation "junit:junit:${junitVersion}"
+    testImplementation "androidx.test.ext:junit:${junitVersion}"
+    testImplementation "androidx.arch.core:core-testing:2.1.0"
+
+    // Google Truth Test
+    testImplementation "com.google.truth:truth:${truthVersion}"
+
+    // Coroutine Test
+    testImplementation "org.jetbrains.kotlinx:kotlinx-coroutines-test:1.6.4"
+    testImplementation "app.cash.turbine:turbine:${turbineVersion}"
 }
 
 def getProperty(String filename, String propName) {
