--- a/data/build.gradle
+++ b/data/build.gradle
@@ -29,20 +29,20 @@ dependencies {
 
     implementation project(":domain")
 
-    //OkHttp
+    // OkHttp
     implementation "com.squareup.okhttp3:okhttp:4.10.0"
     implementation "com.squareup.okhttp3:logging-interceptor:5.0.0-alpha.5"
 
-    //Retrofit
+    // Retrofit
     implementation "com.squareup.retrofit2:retrofit:2.9.0"
     implementation 'com.squareup.retrofit2:converter-moshi:2.9.0'
     implementation "com.jakewharton.retrofit:retrofit2-kotlinx-serialization-converter:0.8.0"
 
-    //DI
+    // DI
     implementation "io.insert-koin:koin-android:${koinVersion}"
     implementation "io.insert-koin:koin-core:$koinVersion"
 
-    //Persistent storage
+    // Persistent storage
     implementation "androidx.room:room-runtime:$roomVersion"
     kapt "androidx.room:room-compiler:$roomVersion"
     implementation "androidx.room:room-ktx:$roomVersion"
@@ -50,32 +50,26 @@ dependencies {
     // Json serialization
     implementation "org.jetbrains.kotlinx:kotlinx-serialization-json:1.3.2"
 
-    // Mockito Unit Tests
-    androidTestImplementation "org.mockito:mockito-core:3.10.0"
-    androidTestImplementation "org.mockito:mockito-android:2.25.0"
-
-    // Test Framework
+    // Instrumented Unit Tests
+    androidTestImplementation "org.mockito:mockito-core:3.11.2"
+    androidTestImplementation "org.mockito:mockito-inline:3.11.2"
     androidTestImplementation "junit:junit:${junitVersion}"
     androidTestImplementation "androidx.test.ext:junit:${junitVersion}"
     androidTestImplementation "androidx.arch.core:core-testing:2.1.0"
-
-    // Google Truth Test
-    androidTestImplementation "com.google.truth:truth:${truthVersion}"
-
-    // Coroutine Test
+    androidTestImplementation "com.google.truth:truth:1.1.3"
     androidTestImplementation "org.jetbrains.kotlinx:kotlinx-coroutines-test:1.6.4"
     androidTestImplementation "app.cash.turbine:turbine:${turbineVersion}"
 
-    // Test Framework
+
+    // Local Unit Tests
+    implementation "androidx.test:core:1.4.0"
     testImplementation "junit:junit:${junitVersion}"
-    testImplementation "androidx.test.ext:junit:${junitVersion}"
+    testImplementation "org.hamcrest:hamcrest-all:${hamcrestVersion}"
     testImplementation "androidx.arch.core:core-testing:2.1.0"
-
-    // Google Truth Test
+    testImplementation "org.jetbrains.kotlinx:kotlinx-coroutines-test:${coroutinesTest}"
     testImplementation "com.google.truth:truth:${truthVersion}"
-
-    // Coroutine Test
-    testImplementation "org.jetbrains.kotlinx:kotlinx-coroutines-test:1.6.4"
+    testImplementation "org.mockito:mockito-core:${mockitoVersion}"
+    testImplementation "org.mockito:mockito-inline:${mockitoVersion}"
     testImplementation "app.cash.turbine:turbine:${turbineVersion}"
 }
 
