--- a/dependencies.gradle
+++ b/dependencies.gradle
@@ -8,7 +8,9 @@ ext {
     roomVersion = '2.4.3'
     navigationVersion = "2.5.2"
     kotlinVersion = "1.6.10"
-    truthVersion = "1.0.1"
+    hamcrestVersion = "1.3"
+    truthVersion = "1.1.3"
+    coroutinesTest="1.6.4"
     turbineVersion = "0.12.0"
-    mockitoVersion = "2.21.0"
+    mockitoVersion = "3.11.2"
 }
