--- a/data/build.gradle
+++ b/data/build.gradle
@@ -55,7 +55,7 @@ dependencies {
     androidTestImplementation "org.mockito:mockito-inline:3.11.2"
     androidTestImplementation "junit:junit:${junitVersion}"
     androidTestImplementation "androidx.test.ext:junit:${junitVersion}"
-    androidTestImplementation "androidx.arch.core:core-testing:2.1.0"
+    androidTestImplementation "androidx.arch.core:core-testing:${coreTestingVersion}"
     androidTestImplementation "com.google.truth:truth:1.1.3"
     androidTestImplementation "org.jetbrains.kotlinx:kotlinx-coroutines-test:1.6.4"
     androidTestImplementation "app.cash.turbine:turbine:${turbineVersion}"
@@ -65,7 +65,7 @@ dependencies {
     implementation "androidx.test:core:1.4.0"
     testImplementation "junit:junit:${junitVersion}"
     testImplementation "org.hamcrest:hamcrest-all:${hamcrestVersion}"
-    testImplementation "androidx.arch.core:core-testing:2.1.0"
+    testImplementation "androidx.arch.core:core-testing:${coreTestingVersion}"
     testImplementation "org.jetbrains.kotlinx:kotlinx-coroutines-test:${coroutinesTest}"
     testImplementation "com.google.truth:truth:${truthVersion}"
     testImplementation "org.mockito:mockito-core:${mockitoVersion}"
