--- a/dependencies.gradle
+++ b/dependencies.gradle
@@ -10,7 +10,9 @@ ext {
     kotlinVersion = "1.6.10"
     hamcrestVersion = "1.3"
     truthVersion = "1.1.3"
-    coroutinesTest="1.6.4"
+    coroutinesTest = "1.6.4"
     turbineVersion = "0.12.0"
     mockitoVersion = "3.11.2"
+    espressoVersion = "3.4.0"
+    coreTestingVersion = "2.1.0"
 }
