fix: delete personal api key

--- a/presentation/build.gradle
+++ b/presentation/build.gradle
@@ -13,6 +13,7 @@ android {
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
         consumerProguardFiles "consumer-rules.pro"
+        buildConfigField "String", "NASA_API_KEY", "\"${getProperty("local.properties", "nasa_api_key")}\""
     }
 
     buildTypes {
@@ -86,4 +87,22 @@ dependencies {
     androidTestImplementation "org.mockito:mockito-inline:${mockitoVersion}"
     androidTestImplementation "app.cash.turbine:turbine:${turbineVersion}"
     androidTestImplementation "androidx.test.espresso:espresso-contrib:${espressoVersion}"
+    androidTestImplementation "io.insert-koin:koin-test:$koinVersion"
+    androidTestImplementation "io.insert-koin:koin-test-junit4:$koinVersion"
+}
+
+
+def getProperty(String filename, String propName) {
+    def propsFile = rootProject.file(filename)
+    if (propsFile.exists()) {
+        def props = new Properties()
+        props.load(new FileInputStream(propsFile))
+        if (props[propName] != null) {
+            return props[propName]
+        } else {
+            print("No such property " + propName + " in file " + filename)
+        }
+    } else {
+        print(filename + " does not exist!")
+    }
 }
